feat: improving imports and removing unnecessary code

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ TYPEORM_TEST_DATABASE=
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
 TYPEORM_ENTITIES=dist/*/.entity.js
+
+# ---------------- MONGOOSE DATABASE CONFIGURATIONS ----------------
+MONGO_URL=
+MONGO_USER=
+MONGO_PASS=
+MONGO_DBNAME=
