--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "simple-shopping-cart",
   "version": "0.0.1",
   "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "8.0.0",
@@ -26,11 +30,15 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "8.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/testing": "8.0.0",
     "@nestjs/typeorm": "8.0.3",
+    "@types/jest": "27.4.0",
     "@types/node": "^18.14.6",
+    "@types/supertest": "^2.0.11",
     "bcryptjs": "^2.4.3",
     "chalk": "2.4.1",
     "express": "^4.18.2",
+    "jest": "^27.2.5",
     "joi": "^17.8.3",
     "mongoose": "^7.0.1",
     "nest": "^0.1.6",
@@ -42,6 +50,8 @@
     "postgres": "^3.3.3",
     "rxjs": "^7.8.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "typeorm": "0.2.41",
     "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^9.0.0"
@@ -54,5 +64,22 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
